--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,12 @@
   },
   "hosting": {
     "public": "./",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "database-rules.json",
